Finished product ready for github pages

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header class="nav-bar">
         <nav>
         <ul>
-        <li>Github</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
+        <li><a href="https://github.com/BenArmstrong81/">GitHub</a></li>
+        <li><a href="https://benarmstrong81.github.io/Ben-Armstrong-Portfolio/">Portfolio</a></li>
+        <li><a href="#Contact">Contact</a></li>
         </ul>
         </nav>        
     </header>
@@ -36,7 +36,7 @@
                 <input type="text" id="email" name="user-email">
             </li>
             <div>
-                <button type="submit">Send</button>
+                <button class=button type="submit">Send</button>
             </div>
         </ul>
         </form>
